# Solana-VanityWallet-Generator

./: README.md  config.json  package-lock.json  package.json  standalone.js
vanity_gen/: Cargo.toml
vanity_gen/src/: main.rs
