[package]
name = "vanity_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "2.1"
rand = "0.8"
rand_chacha = "0.3"
fd_bs58 = "0.1"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

